src/tests/code/shaders/invalid/out-of-range.frag
// { type: "slider", min: 0.0, max: 1.0, default: 2.5 }
uniform float bad;

void main() {
    gl_FragColor = vec4(bad);
}
